5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1601_1800.log
== TEST (2019-03-26 14:48:17) 
-- CODE:
a =float(input("numero1: "))
b =float(input("numero2: "))
c =float(input("numero3: "))

x =(a**2+b**2+c**2)/a+b+C
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x =(a**2+b**2+c**2)/a+b+C
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:49:12) 
-- CODE:
a =float(input("numero1: "))
b =float(input("numero2: "))
c =float(input("numero3: "))

x =(a**2+b**2+c**2)/a+b+c
print(round(x,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:49:43) 
-- CODE:
a =float(input("numero1: "))
b =float(input("numero2: "))
c =float(input("numero3: "))

x =(a**2+b**2+c**2)/a+b+c
print(round(x,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 14:50:35) 
-- CODE:
a =float(input("numero1: "))
b =float(input("numero2: "))
c =float(input("numero3: "))

x =(a**2+b**2+c**2)/(a+b+c)
print(round(x,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 14:51:01) 
-- CODE:
a =float(input("numero1: "))
b =float(input("numero2: "))
c =float(input("numero3: "))

x =(a**2+b**2+c**2)/(a+b+c)
print(round(x,7))
-- EXECUTION TIME:
0.220316
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
